로그인 & 회원가입 작업

--- a/front/styles/globals.scss
+++ b/front/styles/globals.scss
@@ -24,6 +24,22 @@ input:focus {
   outline: none;
 }
 
+// input 자동완성 색채우기 제거
+div {
+  :-webkit-autofill,
+  :-webkit-autofill:hover,
+  :-webkit-autofill:focus,
+  :-webkit-autofill:active {
+    transition: background-color 5000s;
+  }
+}
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  -webkit-text-fill-color: var(--main);
+}
+
 /* 라이트모드(기본) */
 :root {
   --brandColor: #0064ff;
